objects/fferpcore__TestPublication__c.object
<CustomObject>
    <customHelpPage>fferpcore__TestPublicationHelp</customHelpPage>
    <description>A publication that sends a message for the provided properties.</description>
    <fields>
        <fullName>fferpcore__CorrelationId__c</fullName>
        <label>Correlation ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__MessageBody__c</fullName>
        <label>Message Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__MessageType__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Message Type</label>
        <referenceTo>fferpcore__MessageType__c</referenceTo>
        <relationshipLabel>Test Mode Publications</relationshipLabel>
        <relationshipName>Test_Publications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__Publisher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It is possible to set up a Test Mode Subscription that forwards messages after it has completed its work. In order to set up the messages that the Subscription forwards, we need to link a Test Mode Publication to it. The relationship exists on the Test Mode Publication so that multiple Publications can be linked to a single Test Mode Subscription.</description>
        <inlineHelpText>It is possible to set up a Test Mode Subscription that forwards messages after it has completed its work. In order to set up the messages that the Subscription forwards, we need to link a Test Mode Publication to it.</inlineHelpText>
        <label>Test Mode Subscription</label>
        <referenceTo>fferpcore__TestSubscription__c</referenceTo>
        <relationshipLabel>Response Publications</relationshipLabel>
        <relationshipName>ForwardMessages</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test Mode Publication</label>
    <listViews>
        <fullName>fferpcore__All</fullName>
        <columns>NAME</columns>
        <columns>fferpcore__MessageType__c</columns>
        <columns>fferpcore__CorrelationId__c</columns>
        <columns>fferpcore__Publisher__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Test Mode Publication Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Mode Publications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>